tests/errors/condition_not_boolean.dang
# Test conditional with non-boolean condition
let result = if (42) { "number condition" } else { "default" }
